--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>Meisernators Home</h1>
+    <button>Button</button>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, et explicabo provident debitis eius quisquam natus tempore, repellat iusto enim, blanditiis vitae laudantium at veniam eum quia recusandae. Culpa, atque?</p>
 </body>
 </html>
